--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,16 +16,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SGNOTrash.NoActionBar"
-        tools:targetApi="31"
-        >
+        tools:targetApi="31">
+        <activity
+            android:name=".ReportForm"
+            android:exported="false" />
+        <activity
+            android:name=".RequestForm"
+            android:exported="false" />
         <activity
             android:name=".RequestActivity"
             android:exported="false"
-            android:theme="@style/Theme.SGNOTrash.NoActionBar"/>/>
+            android:theme="@style/Theme.SGNOTrash.NoActionBar" />
         <activity
             android:name=".ReportActivity"
             android:exported="false"
-            android:theme="@style/Theme.SGNOTrash.NoActionBar"/>/>
+            android:theme="@style/Theme.SGNOTrash.NoActionBar" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
