--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,35 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+            coreLibraryDesugaringEnabled true
+        }
+    }
+
+    compileOptions {
+        // Required for MongoDB driver's Record classes
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    packagingOptions {
+        resources {
+            // Resolve all META-INF conflicts
+            excludes += [
+                    'META-INF/native-image/**',
+                    'META-INF/INDEX.LIST',
+                    'META-INF/*.md',
+                    'META-INF/DEPENDENCIES'
+            ]
+            pickFirsts += [
+                    '**/LICENSE',
+                    '**/LICENSE.txt'
+            ]
+        }
     }
 
     buildTypes {
@@ -23,17 +50,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
-
+    implementation 'com.datastax.astra:astra-db-java:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
@@ -44,7 +68,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.preference:preference:1.2.0'
     testImplementation 'junit:junit:4.13.2'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation('com.google.code.gson:gson:2.8.7')
+    implementation'com.android.volley:volley:1.2.1'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 }
