--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation('com.google.code.gson:gson:2.8.7')
+    implementation 'org.jsoup:jsoup:1.13.1'
+
     implementation'com.android.volley:volley:1.2.1'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
