--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     implementation'com.android.volley:volley:1.2.1'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.sun.mail:android-mail:1.6.7'
+    implementation 'com.sun.mail:android-activation:1.6.7'
 }
